--- a/app/catalog-2.html
+++ b/app/catalog-2.html
@@ -106,12 +106,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -709,6 +717,7 @@
       </div>
     </div>
   </header>
+
   <div class="wrapper">
     <main class="main">
       <div class="fixed-socials">
@@ -1197,7 +1206,7 @@
               <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
               </label>
               </form>
             </aside>
@@ -1253,9 +1262,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1287,8 +1304,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1320,9 +1345,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1353,9 +1386,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1387,8 +1428,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1420,9 +1469,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1453,9 +1510,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1487,8 +1552,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1520,9 +1593,17 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
-                </button>
+                <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
+                    </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
                 </button>
@@ -1578,7 +1659,7 @@
               <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
               </label>
               </form>
           </div>
