--- a/app/about.html
+++ b/app/about.html
@@ -50,7 +50,7 @@
       </ul>
    </div>
 
-  <header class="header">
+   <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -108,12 +108,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -617,6 +625,31 @@
                       </a>                           
                     </div>
                   </div>
+                  <div class="basket-order-block">
+                    <div class="basket-order-img">
+                      <div class="img-block">
+                        <img src="images/your-order-img1.jpg" alt="">
+                      </div>
+                      <span>Тахеометр Nikon Nivo 5M б/у</span>
+                    </div>
+                    <div class="basket-order-count">
+                      <div class="count">
+                        <span class="minus">-</span>
+                        <div class="count-in">
+                            <input type='number' min='0' max='1000' step='1' value='1'>
+                            <p>шт.</p>
+                        </div>
+                        <span class="plus active">+</span>
+                      </div>
+                      <p>333 119 ₽</p>
+                      <a href="#!" class="icon">
+                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M17 17L1 1M17 1L1 17" stroke="#414042" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                      </a>                           
+                    </div>
+                  </div>
+
                   <div class="basket-order-block">
                     <div class="basket-order-img">
                       <div class="img-block">
