--- a/app/card-product.html
+++ b/app/card-product.html
@@ -50,7 +50,7 @@
       </ul>
    </div>
 
-  <header class="header">
+   <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -108,12 +108,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -742,7 +750,7 @@
                                     <label class="control control--checkbox">
                                         <input type="checkbox" checked="checked"/>
                                         <div class="control__indicator"></div>
-                                        <span>Оставляя заявку вы соглашаетесь с обработкой персональных данных</span>
+                                        <span>Оставляя заявку <a href="#!">вы соглашаетесь с обработкой персональных данных</a></span>
                                     </label>
                                 </div>
                             </form>
@@ -1442,8 +1450,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1481,8 +1497,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1520,8 +1544,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1559,8 +1591,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1598,8 +1638,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1637,8 +1685,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1692,8 +1748,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1731,8 +1795,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1770,8 +1842,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1809,8 +1889,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1848,8 +1936,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
@@ -1887,8 +1983,16 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
+                    <button class="card-basket add-to-cart">
+                      <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                      <div class="cart">
+                          <div>
+                              <div></div>
+                              <div></div>
+                          </div>
+                      </div>
+                      <div class="dots"></div>
                     </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
