--- a/app/catalog.html
+++ b/app/catalog.html
@@ -106,12 +106,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -1106,7 +1114,7 @@
               <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
               </label>
               </form>
             </aside>
@@ -1167,8 +1175,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1205,9 +1221,17 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
-                    </button>
+                    <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
+                </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
                     </button>
@@ -1242,8 +1266,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1279,8 +1311,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1317,9 +1357,17 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
-                    </button>
+                    <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
+                </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
                     </button>
@@ -1354,8 +1402,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1391,8 +1447,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1429,9 +1493,17 @@
                   </div>
                   <div class="card-bottom">
                     <button class="btn-main card-click">Купить в 1 клик</button>
-                    <button class="card-basket">
-                      <img src="images/icons/basket.svg" alt="icon">
-                    </button>
+                    <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
+                </button>
                     <button class="card-comparison">
                       <img src="images/icons/comp.svg" alt="icon">
                     </button>
@@ -1466,8 +1538,16 @@
               </div>
               <div class="card-bottom">
                 <button class="btn-main card-click">Купить в 1 клик</button>
-                <button class="card-basket">
-                  <img src="images/icons/basket.svg" alt="icon">
+                <button class="card-basket add-to-cart">
+                  <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                  <div class="cart">
+                      <div>
+                          <div></div>
+                          <div></div>
+                      </div>
+                  </div>
+                  <div class="dots"></div>
                 </button>
                 <button class="card-comparison">
                   <img src="images/icons/comp.svg" alt="icon">
@@ -1661,7 +1741,7 @@
               <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
               <label class="cta-label">
                 <input type="checkbox" required checked class="cta-checkbox">
-                <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
               </label>
               </form>
           </div>
