--- a/app/dir.html
+++ b/app/dir.html
@@ -47,7 +47,7 @@
       </ul>
    </div>
 
-  <header class="header">
+   <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -105,12 +105,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
