--- a/app/rent.html
+++ b/app/rent.html
@@ -50,7 +50,7 @@
       </ul>
    </div>
 
-  <header class="header">
+   <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -108,12 +108,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -1074,7 +1082,7 @@
                           <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
                           <label class="cta-label">
                           <input type="checkbox" required checked class="cta-checkbox">
-                          <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                          <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
                           </label>
                       </form>
                   </aside>
@@ -1607,7 +1615,7 @@
                   <button type="submit" class="btn-main cta-btn">Получить консультацию</button>
                   <label class="cta-label">
                   <input type="checkbox" required checked class="cta-checkbox">
-                  <p>Оставляя заявку вы соглашаетесь <br> с обработкой персональных данных</p>
+                  <p>Оставляя заявку <a href="#!">вы соглашаетесь <br> с обработкой персональных данных</a></p>
                   </label>
                 </form>
               </div>
