--- a/app/selection.html
+++ b/app/selection.html
@@ -50,7 +50,7 @@
       </ul>
    </div>
 
-  <header class="header">
+   <header class="header">
     <div class="header-top">
       <div class="container">
         <div class="header-top__w">
@@ -108,12 +108,20 @@
               <a href="tel:88000000000">8 (800) 000-00-00</a>
               <p>Пн-Пт: с 9:30 до 19:00 <br> Сб: с 10:00 до 15:00</p>
             </div>
-            <button class="btn-main header-btn">Заказать звонок</button>
+            <a href="#!" class="btn-main header-btn">Заказать звонок</a>
           </div>
         </div>
       </div>
       <div class="header-nav">
         <img class="header-cross" src="images/icons/cross.svg" alt="img">
+        <div class="nav-search for-mob">
+          <form action="#!">
+            <div class="form-group">
+              <input type="text" name="nav-search" id="nav-search" placeholder="Поиск">
+              <button><img src="images/icons/search.svg" alt=""></button>
+            </div>
+          </form>
+        </div>
         <div class="container">
           <div class="header-nav__w">
             <ul class="header-list">
@@ -825,8 +833,16 @@
                         </div>
                         <div class="card-bottom">
                           <button class="btn-main card-click">Купить в 1 клик</button>
-                          <button class="card-basket">
-                            <img src="images/icons/basket.svg" alt="icon">
+                          <button class="card-basket add-to-cart">
+                            <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="cart">
+                                <div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div class="dots"></div>
                           </button>
                           <button class="card-comparison">
                             <img src="images/icons/comp.svg" alt="icon">
@@ -864,8 +880,16 @@
                         </div>
                         <div class="card-bottom">
                           <button class="btn-main card-click">Купить в 1 клик</button>
-                          <button class="card-basket">
-                            <img src="images/icons/basket.svg" alt="icon">
+                          <button class="card-basket add-to-cart">
+                            <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="cart">
+                                <div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div class="dots"></div>
                           </button>
                           <button class="card-comparison">
                             <img src="images/icons/comp.svg" alt="icon">
@@ -904,8 +928,16 @@
                           </div>
                           <div class="card-bottom">
                             <button class="btn-main card-click">Купить в 1 клик</button>
-                            <button class="card-basket">
-                              <img src="images/icons/basket.svg" alt="icon">
+                            <button class="card-basket add-to-cart">
+                              <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                              <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                              <div class="cart">
+                                  <div>
+                                      <div></div>
+                                      <div></div>
+                                  </div>
+                              </div>
+                              <div class="dots"></div>
                             </button>
                             <button class="card-comparison">
                               <img src="images/icons/comp.svg" alt="icon">
@@ -943,8 +975,16 @@
                         </div>
                         <div class="card-bottom">
                           <button class="btn-main card-click">Купить в 1 клик</button>
-                          <button class="card-basket">
-                            <img src="images/icons/basket.svg" alt="icon">
+                          <button class="card-basket add-to-cart">
+                            <div class="default"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="success"><img src="images/icons/basket.svg" alt="icon"></div>
+                            <div class="cart">
+                                <div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div class="dots"></div>
                           </button>
                           <button class="card-comparison">
                             <img src="images/icons/comp.svg" alt="icon">
